Prevent multi-line wrapping and add truncation to files table columns

--- a/app/static/css/gallery.css
+++ b/app/static/css/gallery.css
@@ -112,6 +112,13 @@ div.dataTables_wrapper span.select-item {
     margin-left: 0.25em;
 }
 
+#files-table td {
+    max-width: 0;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+}
+
 #files-table thead th:first-child {
     vertical-align: middle;
 }
